fix modal hidden behind top bar

--- a/web/styles/custom.css
+++ b/web/styles/custom.css
@@ -752,3 +752,7 @@ img.smj-nav-logo {
 .smj-sort-choice.selected {
   background-color: #fdc345;
 }
+
+.modal {
+  margin-top: 10%;
+}
